<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="agreement_header">Соглашение</string>
    <string name="agreement_header_1">Оферта на оказание образовательных услуг дополнительного\nобразования\nЯндекс.Практикум для физических лиц</string>
    <string name="back">Назад</string>
    <string name="employee">Работник месяца</string>
    <string name="android_course_url">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="my_email">abtomex@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="no_title">No Title</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="no_time">0:00</string>
    <string name="todo">TODO</string>
    <string name="nothing_to_find">Ничего не нашлось</string>
    <string name="no_connect">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history">Вы искали</string>
    <string name="album_image">картинка альбома</string>
    <string name="track_name">Track Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="durability">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_any_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="no_media">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="agreement_description">Данный документ является действующим,\nесли расположен по адресу: https://yandex.ru\n/legal/practicum_offer\n\nРоссийская Федерация, город Москва</string>
    <string name="agreement_terms">Понятия, используемые в Оферте, означают следующее:\nАвторизованные адреса — адреса\nэлектронной почты каждой Стороны.\nАвторизованным адресом Исполнителя\nявляется адрес электронной почты, указанный\nв разделе 11 Оферты. Авторизованным\nадресом Студента является адрес\nэлектронной почты, указанный Студентом в\nЛичном кабинете.\n\nВводный курс — начальный Курс обучения по\nпредставленным на Сервисе Программам\nобучения в рамках выбранной Студентом\nПрофессии или Курсу, рассчитанный на\nопределенное количество часов\nсамостоятельного обучения, который\nпредоставляется Студенту единожды при\nрегистрации на Сервисе на безвозмездной\nоснове. В процессе обучения в рамках\nВводного курса Студенту предоставляется\nвозможность ознакомления с работой Сервиса и определения возможности Студента продолжить обучение в рамках Полного курса по выбранной Студентом Программе обучения. Точное количество часов обучения в рамках Вводного курса зависит от выбранной Студентом Профессии или Курса и определяется в Программе обучения, размещенной на Сервисе. Максимальный срок освоения Вводного курса составляет 1 (один) год с даты начала обучения.</string>
    <string name="agreement_header_terms">1. ТЕРМИНЫ</string>
    <string name="zero_timer">00:00</string>
    <string name="new_playlist_title">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="break_playlist_creation">Завершить создание плейлиста?</string>
    <string name="break_playlist_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="continue_breaking">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="playlist_created">Плейлист «%s» создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="complete_add_to_playlist">Добавлено в плейлист %s</string>
    <string name="tracks_count">0 треков</string>
    <string name="track_already_exists_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="track_items_count_variant1">%d трек</string>
    <string name="track_items_count_variant2">%d трека</string>
    <string name="track_items_count_variant3">%d треков</string>
    <string name="minutes_items_count_variant1">%d минута</string>
    <string name="minutes_items_count_variant2">%d минуты</string>
    <string name="minutes_items_count_variant3">%d минут</string>
    <string name="new_playlist_placeholder">Best songs 2021</string>
    <string name="year_placeholder">2022</string>
    <string name="_300min_placeholder">300 минут</string>
    <string name="_98tracks_placeholder">98 треков</string>
    <string name="share">Поделиться</string>
    <string name="more_options">Больше опций</string>
    <string name="ask_to_delete_track_message">Хотите удалить трек?</string>
    <string name="message_no">Нет</string>
    <string name="message_yes">Да</string>
    <string name="playlist_has_nothing_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="message_playlist_title">Плейлист: %s\n%s</string>
    <string name="message_playlist_tracks_count">количество треков: %d</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="ask_to_delete_playlist">Хотите удалить плейлист \"%s\"</string>
    <string name="save">Сохранить</string>
    <string name="edit_playlist">Редактировать</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

</resources>