<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/main_linear_layout_style"
    >

    <com.google.android.material.appbar.MaterialToolbar style="@style/header_style">

        <TextView
            style="@style/header_text_style"
            android:text="@string/app_name"
            android:textColor="@color/light_text_color"
            />
    </com.google.android.material.appbar.MaterialToolbar>

    <Button
        android:id="@+id/button_search"
        style="@style/main_activity_buttons_style"
        android:text="@string/search"
        app:icon="@drawable/search"
        />

    <Button
        android:id="@+id/button_media"
        style="@style/main_activity_buttons_style"
        android:text="@string/media"
        app:icon="@drawable/media" />

    <Button
        android:id="@+id/button_settings"
        style="@style/main_activity_buttons_style"
        android:text="@string/settings"
        app:icon="@drawable/settings" />


</LinearLayout>