<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        app:navigationIcon="@drawable/back"
        app:title="@string/settings" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/night_theme_switch"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/dark_theme"
        android:textSize="16sp"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"
        />

    <TextView
        android:id="@+id/shareText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/share"
        android:fontFamily="@font/ysdisplayfont" />
    <TextView
        android:id="@+id/helpdeskText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/support"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/agreementText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/agreement"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/next" />

</LinearLayout>