<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/parent_linear_layout_style"
    android:orientation="vertical"
    android:nestedScrollingEnabled="true"
    tools:context=".search.ui.activity.SearchFragment"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/action_back"
        style="@style/header_style"
        android:layout_marginStart="0dp"
        app:navigationIcon="@drawable/back">

        <TextView
            style="@style/header_text_style"
            android:text="@string/search" />
    </com.google.android.material.appbar.MaterialToolbar>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <EditText
            android:id="@+id/searchEditText"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginHorizontal="16dp"
            android:autofillHints=""
            android:drawableStart="@drawable/search"
            android:drawablePadding="8dp"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLength="200"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:background="@drawable/edittext_bkg"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <ImageButton
            android:id="@+id/clearIcon"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/clear"
            app:tint="@color/icons_color_clear"
            android:visibility="gone" />

    </FrameLayout>
    <TextView
        android:id="@+id/search_history_text"
        style="@style/activity_search_infos_text_style"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="0dp"
        android:paddingBottom="0dp"
        android:text="@string/search_history"
        android:visibility="gone"
        />

    <ProgressBar android:id="@+id/progress_bar"
        android:layout_marginTop="140dp"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/progress_bar_color"
        tools:visibility="visible"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackRecyclerView"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        <Button
            android:id="@+id/clear_history"
            style="@style/btn_style"
            android:text="@string/clear_history"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            style="@style/errors_ic_style"
            android:layout_marginTop="102dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_no_content"
            />
        <TextView
            style="@style/activity_search_infos_text_style"
            android:text="@string/nothing_to_find"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_connect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        >
        <ImageView
            style="@style/errors_ic_style"
            android:layout_marginTop="102dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_no_connect"
            />
        <TextView
            style="@style/activity_search_infos_text_style"
            android:text="@string/no_connect"
            />

        <Button
            android:id="@+id/btn_reload"
            style="@style/btn_style"
            android:layout_marginTop="24dp"
            android:text="@string/reload"
            />
    </LinearLayout>



</LinearLayout>