<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/trackIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/no_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/no_title"
            android:textColor="@color/track_text_color"
            android:textSize="@dimen/track_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trackArtistName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:text="@string/unknown_artist"
                android:textColor="@color/track_text_artist_color"
                android:textSize="@dimen/track_additions_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/todo"
                android:src="@drawable/dot_delimiter"
                android:textColor="@color/track_text_artist_color" />

            <TextView
                android:id="@+id/trackTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/no_time"
                android:textColor="@color/track_text_artist_color"
                android:textSize="@dimen/track_additions_text_size" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="8dp"
        android:layout_height="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/fwd" />

</LinearLayout>